# booter

./: Cargo.toml  README.md  booter-server.service
booter-common/: Cargo.toml
booter-common/src/: lib.rs
booter-companion/: Cargo.toml
booter-companion/src/: main.rs  scratch_wt.rs
booter-server/: Cargo.toml  build.rs
booter-server/migrations/: 20260606000000_init.sql
booter-server/src/: api.rs  api_companions.rs  config.rs  db.rs  email.rs  main.rs  mijia.rs  mijia_client.rs  quic.rs  wt.rs
booter-web/: index.html  package.json  tailwind.config.js  vite.config.ts
booter-web/src/: App.tsx
booter-web/src/components/: AdminDelayShutdown.tsx  AmbientBackground.tsx  CompanionsPanel.tsx  GlassCard.tsx  LogsPanel.tsx  ProtectedRoute.tsx  SessionsPanel.tsx
booter-web/src/context/: AuthContext.tsx
booter-web/src/hooks/: useWebTransport.ts
booter-web/src/pages/: Admin.tsx  AdminLogin.tsx  Dashboard.tsx  Login.tsx
booter-web/src/utils/: fetchClient.ts
