[package]
name = "booter-companion"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-util = { version = "0.7", features = ["codec"] }
booter-common = { path = "../booter-common" }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4.2"
rhai = { version = "1.25.1", features = ["sync", "serde"] }
ureq = { version = "2.9", features = ["json"] }
rustls-native-certs = "0.8.3"
